--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,16 @@
                 "authProtocol": "default",
                 "enableSsl": "Enabled",
                 "ssl": {
-                    "ca": "C:\\E-commerce_Construction\\isrgrootx1.pem"
+                    "ca": "C:\\E-commerce_Construction\\ca.pem"
                 }
             },
             "previewLimit": 50,
-            "server": "gateway01.ap-southeast-1.prod.aws.tidbcloud.com",
-            "port": 4000,
-            "driver": "TiDB",
-            "name": "E-commerce_construction",
-            "username": "3SaC4CjeFeQ5q9D.root",
-            "database": "product_db",
-            "askForPassword": true
+            "server": "mysql-2ebaaef9-ecommerce-construction-1.c.aivencloud.com",
+            "port": 23012,
+            "driver": "MySQL",
+            "name": "E-commerce_Construction",
+            "username": "avnadmin",
+            "database": "defaultdb"
         }
     ]
 }
