--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5"
   }
 }
